cambio numero tel

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <!-- ACERCA DE MI -->
 <section id="Acercademi" >
-    <h1 class="my-5 text-center">Portafolio</h1>
+    <h1 class="my-5 text-center fw-bold">Portafolio</h1>
     <div class="my-4">
         <img src="./assets/img/fotoperfil.jpg" alt="img cv" width="400px" class="img-fluid mx-auto d-block rounded-circle">
     </div>    
@@ -46,9 +46,9 @@
     <div class="container">
         <div class="text-justify">
             <h3>Bienvenidos a mi perfil</span></h3><br>
-            <p>Hola, me llamo <strong class="color-text">Yerko Orellana</strong>, tengo 31 años y actualmente soy estudiante en la Academia Desafio Latam como 
+            <p>Hola, me llamo <strong class="color-text">Yerko Orellana</strong>, tengo 32 años y actualmente soy estudiante en la Academia Desafio Latam como 
             Desarrollador Full Stack JavaScript.</p>
-            <p><b>Phone:</b> +56-989801042
+            <p><b>Phone:</b> +56-9898XXXXX
             <p><b>E-mail:</b> orellana.yerko@gmail.com
         </div>    
     </div>
