--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 <footer class="text-center my-3 fw-light">
     <img src="/assets/img/logonegro.png" alt="logo" style="width: 250px;">
-    <p class="my-3 fs-5">© 2024 Portafolio Yerko Orellana. Todos los derechos reservados.</p>
+    <p class="my-3 fs-5">© 2024 Portafolio Yerko Orellana.</p>
 </footer>
 
 <!-- JAVASCRIPT BUNDLE WITH POPPER -->
