--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="./assets/img/logoblanco.png">
+            <img src="./assets/img/logoblanco.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -134,7 +134,7 @@
 <!-- FIN FORM -->
 
 <footer class="text-center my-3 fw-light">
-    <img src="/assets/img/logonegro.png" alt="logo" style="width: 250px;">
+    <img src="/assets/img/logonegro.png" alt="logo" style="width: 230px;">
     <p class="my-3 fs-5">© 2024 Portafolio Yerko Orellana.</p>
 </footer>
 
