--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 <!-- FIN FORM -->
 
 <footer class="text-center my-3 fw-light">
-    <img src="./assets/img/logo2.png>"
-    <p class="my-3 fs-5">© 2024 Portafolio Yerko Orellana.</p>
+    <img src="./assets/img/logo2.png" alt="logo">
+    <p class="my-3">© 2024 Portafolio Yerko Orellana.</p>
 </footer>
 
 <!-- JAVASCRIPT BUNDLE WITH POPPER -->
