--- a/index.html
+++ b/index.html
@@ -36,23 +36,62 @@
 <!-- FIN NAVBAR -->
 
 <!-- ACERCA DE MI -->
-<section id="Acercademi" >
-    <h1 class="my-5 text-center fw-bold">Portafolio</h1>
-    <div class="my-4">
-        <img src="./assets/img/fotoperfil.jpg" alt="img cv" width="400px" class="img-fluid mx-auto d-block rounded-circle">
-    </div>    
-    <div class="my-5">
+<h1 class="text-center fw-bold my-5"><u>Curriculum Vitae</u></h1>
+<div class="container">
+    <div class="row">
+        <div class="col my-4">
+            <div id="Acercademi" >
+                <div>
+                    <img src="./assets/img/fotoperfil.jpg" alt="img cv" width="400px" class="img-fluid d-block rounded-circle img-thumbnail">
+                </div>    
+                <div class="my-5">
+                </div>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    <div class="text-justify">
+                        <h2 class="my-4 "><u>Sobre mi</u></h2>
+                            <div class="d-flex d-flex justify-content-start grid gap-2">
+                                <div><i class="fa-solid fa-user my-1 "></i></div>
+                                <div><p><b>Nombre: </b>Yerko Orellana</p></div>
+                            </div>   
+                            <div class="d-flex d-flex justify-content-start grid gap-2">
+                                <div><i class="fa-solid fa-flag my-1 "></i></div>
+                                <div><p><b>Nacionalidad: </b>Chilena</p></div>
+                            </div>  
+                            <div class="d-flex d-flex justify-content-start grid gap-2">
+                                <div><i class="fa-solid fa-cake-candles my-1 "></i></div>
+                                <div><p><b>Edad: </b>32 años</p></div>
+                            </div>
+                            <div class="d-flex d-flex justify-content-start grid gap-2">
+                                <div><i class="fa-solid fa-mobile-retro my-1 "></i></div>
+                                <div><p><b>Phone: </b>+56-9898XXXXX</p></div>
+                            </div>    
+                            <div class="d-flex d-flex justify-content-start grid gap-2">
+                                <div><i class="fa-solid fa-envelope my-1 "></i></div>
+                                <div><p><b>E-mail: </b>orellana.yerko@gmail.com</p></div>
+                            </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="col my-4">
+            <ul class="list-group list-group-flush">
+                <h3 class="text-center">Resumen</h3>
+                <li class="list-group-item">Actualmente soy estudiante en la Academia Desafio Latam en la carrera Desarrollador Full Stack JavaScript.</li>
+                <h3 class="text-center mt-4">Profesión</h3>
+                <li class="list-group-item">Ingeniero en Administración de Empresas con mención en Finanzas</li>
+                <h3 class="text-center mt-4">Experiencia Laboral</h3>   
+                <li class="list-group-item mt-3">Jefe de Swift banco Bice; Jornada completa; Desde Ene. 2023 hasta la actualidad; Las Condes, Región Metropolitana de Santiago, Chile.</li>
+                <li class="list-group-item mt-3">Supervisor de Swift banco Bice; Jornada completa; Desde oct. 2022 hasta Ene. 2023; Las Condes, Región Metropolitana de Santiago, Chile.</li>
+                <li class="list-group-item mt-3">Oficial Administrativo Pagos Alto Valor Banco Security; Jornada completa; Desde nov. 2018 hasta oct.2022; Las Condes, Región Metropolitana de Santiago, Chile.</li>
+                <h3 class="text-center mt-4">Formación</h3> 
+                <li class="list-group-item mt-3">Ingeniería en Administración de Empresas con mención en Finanzas; Inacap Apoquindo.</li>
+                <li class="list-group-item mt-3">Técnico en Informática; Inacap Apoquindo.</li>
+            </ul>
+        </div>
     </div>
-    <div class="container">
-        <div class="text-justify">
-            <h3>Bienvenidos a mi perfil</span></h3><br>
-            <p>Hola, me llamo <strong class="color-text">Yerko Orellana</strong>, tengo 32 años y actualmente soy estudiante en la Academia Desafio Latam como 
-            Desarrollador Full Stack JavaScript.</p>
-            <p><b>Phone:</b> +56-9898XXXXX
-            <p><b>E-mail:</b> orellana.yerko@gmail.com
-        </div>    
-    </div>
-</section>
+</div>
 <!-- FIN ACERCA DE MI -->
 
 <!-- DESAFIOS -->
@@ -63,28 +102,28 @@
         <div class="row mt-2">
             <div class="col-md">
                 <div class="card m-3">
-                    <img src="./assets/img/landingpage.png" class="card-img-top" alt="LandingPage">
+                    <img src="./assets/img/landingpage.png" class="card-img-top img-thumbnail" alt="LandingPage">
                     <div class="card-body">
                         <h5 class="titulotarjeta fw-dark">Landing Page</h5>
-                        <a a href="https://github.com/YerkoOrellana/LandingPage" target="_blank" class="align-self-end btn bg-dark btn-outline-light my-3">Ir al repositorio</a>
+                        <a a href="https://github.com/YerkoOrellana/LandingPage" target="_blank" class="align-self-end btn bg-dark btn-outline-light my-3">Ir al repositorio <i class="fa-brands fa-github"></i></a></a>
                 </div>
             </div>
         </div>
         <div class="col-md">
             <div class="card m-3">
-                <img src="./assets/img/iguanapage.png" class="card-img-top" alt="IguanaPage">
+                <img src="./assets/img/iguanapage.png" class="card-img-top img-thumbnail" alt="IguanaPage">
                 <div class="card-body">
                     <h5 class="titulotarjeta fw-dark">Iguana Page</h5>
-                    <a href="https://github.com/YerkoOrellana/IguanaPage" target="_blank" class="align-self-end btn bg-dark btn-outline-light my-3">Ir al repositorio</a>
+                    <a href="https://github.com/YerkoOrellana/IguanaPage" target="_blank" class="align-self-end btn bg-dark btn-outline-light my-3">Ir al repositorio <i class="fa-brands fa-github"></i></a></a>
                 </div>
             </div>
         </div>
         <div class="col-md">
             <div class="card m-3">
-                <img src="./assets/img/cuppon.png" class="card-img-top" alt="Cuppon">
+                <img src="./assets/img/cuppon.png" class="card-img-top img-thumbnail" alt="Cuppon">
                 <div class="card-body">
                     <h5 class="titulotarjeta fw-dark">Cuppon</h5>
-                    <a href="https://github.com/YerkoOrellana/Cuppon" target="_blank" class="align-self-end btn bg-dark btn-outline-light my-3">Ir al repositorio</a>
+                    <a href="https://github.com/YerkoOrellana/Cuppon" target="_blank" class="align-self-end btn bg-dark btn-outline-light my-3">Ir al repositorio <i class="fa-brands fa-github"></i></a></a>
                 </div>
             </div>
         </div>
@@ -96,8 +135,7 @@
 <!-- HERRAMIENTAS -->
 <section id="Herramientas" class="container text-center my-5">
     <h1 class="text-dark my-2">Herramientas</h1>
-    <p class="my-5 fw-light text-dark fs-5">Conocimientos adquiridos:</p>
-    <div class="row">
+    <div class="row mt-5">
         <div class="col-12 col-md-3">
             <i class="fa-brands fa-html5 fa-3x my-1"></i>
             <h3 class="my-3 fw-light">HTML-5</h3>
@@ -134,7 +172,7 @@
 <!-- FIN FORM -->
 
 <footer class="text-center my-3 fw-light">
-    <img src="./assets/img/logo2.png" alt="logo" style="width: 200px;">
+    <img src="./assets/img/logo2.png" alt="logo" width="200px">
     <p class="my-3 fs-4">© 2024 Portafolio Yerko Orellana.</p>
 </footer>
 
