--- a/index.html
+++ b/index.html
@@ -36,62 +36,64 @@
 <!-- FIN NAVBAR -->
 
 <!-- ACERCA DE MI -->
-<h1 class="text-center fw-bold my-5"><u>Curriculum Vitae</u></h1>
-<div class="container">
-    <div class="row">
-        <div class="col my-4">
-            <div id="Acercademi" >
+<section id="Acercademi">
+    <h1 class="text-center fw-bold my-5"><u>Curriculum Vitae</u></h1>
+    <div class="container">
+        <div class="row">
+            <div class="col my-4">
                 <div>
-                    <img src="./assets/img/fotoperfil.jpg" alt="img cv" width="400px" class="img-fluid d-block rounded-circle img-thumbnail">
-                </div>    
-                <div class="my-5">
-                </div>
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                    <div class="text-justify">
-                        <h2 class="my-4 "><u>Sobre mi</u></h2>
-                            <div class="d-flex d-flex justify-content-start grid gap-2">
-                                <div><i class="fa-solid fa-user my-1 "></i></div>
-                                <div><p><b>Nombre: </b>Yerko Orellana</p></div>
-                            </div>   
-                            <div class="d-flex d-flex justify-content-start grid gap-2">
-                                <div><i class="fa-solid fa-flag my-1 "></i></div>
-                                <div><p><b>Nacionalidad: </b>Chilena</p></div>
-                            </div>  
-                            <div class="d-flex d-flex justify-content-start grid gap-2">
-                                <div><i class="fa-solid fa-cake-candles my-1 "></i></div>
-                                <div><p><b>Edad: </b>32 años</p></div>
-                            </div>
-                            <div class="d-flex d-flex justify-content-start grid gap-2">
-                                <div><i class="fa-solid fa-mobile-retro my-1 "></i></div>
-                                <div><p><b>Phone: </b>+56-9898XXXXX</p></div>
-                            </div>    
-                            <div class="d-flex d-flex justify-content-start grid gap-2">
-                                <div><i class="fa-solid fa-envelope my-1 "></i></div>
-                                <div><p><b>E-mail: </b>orellana.yerko@gmail.com</p></div>
-                            </div>
+                    <div>
+                        <img src="./assets/img/fotoperfil.jpg" alt="img cv" width="400px" class="img-fluid d-block rounded-circle img-thumbnail">
+                    </div>    
+                    <div class="my-5">
                     </div>
-                </li>
-            </ul>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <div class="text-justify">
+                            <h2 class="my-4 "><u>Sobre mi</u></h2>
+                                <div class="d-flex d-flex justify-content-start grid gap-2">
+                                    <div><i class="fa-solid fa-user my-1 "></i></div>
+                                    <div><p><b>Nombre: </b>Yerko Orellana</p></div>
+                                </div>   
+                                <div class="d-flex d-flex justify-content-start grid gap-2">
+                                    <div><i class="fa-solid fa-flag my-1 "></i></div>
+                                    <div><p><b>Nacionalidad: </b>Chilena</p></div>
+                                </div>  
+                                <div class="d-flex d-flex justify-content-start grid gap-2">
+                                    <div><i class="fa-solid fa-cake-candles my-1 "></i></div>
+                                    <div><p><b>Edad: </b>32 años</p></div>
+                                </div>
+                                <div class="d-flex d-flex justify-content-start grid gap-2">
+                                    <div><i class="fa-solid fa-mobile-retro my-1 "></i></div>
+                                    <div><p><b>Phone: </b>+56-9898XXXXX</p></div>
+                                </div>    
+                                <div class="d-flex d-flex justify-content-start grid gap-2">
+                                    <div><i class="fa-solid fa-envelope my-1 "></i></div>
+                                    <div><p><b>E-mail: </b>orellana.yerko@gmail.com</p></div>
+                                </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col my-4">
+                <ul class="list-group list-group-flush">
+                    <h3 class="text-center">Resumen</h3>
+                    <li class="list-group-item">Actualmente soy estudiante en la Academia Desafio Latam en la carrera Desarrollador Full Stack JavaScript.</li>
+                    <h3 class="text-center mt-4">Profesión</h3>
+                    <li class="list-group-item">Ingeniero en Administración de Empresas con mención en Finanzas</li>
+                    <h3 class="text-center mt-4">Experiencia Laboral</h3>   
+                    <li class="list-group-item mt-3">Jefe de Swift banco Bice; Jornada completa; Desde Ene. 2023 hasta la actualidad; Las Condes, Región Metropolitana de Santiago, Chile.</li>
+                    <li class="list-group-item mt-3">Supervisor de Swift banco Bice; Jornada completa; Desde oct. 2022 hasta Ene. 2023; Las Condes, Región Metropolitana de Santiago, Chile.</li>
+                    <li class="list-group-item mt-3">Oficial Administrativo Pagos Alto Valor Banco Security; Jornada completa; Desde nov. 2018 hasta oct.2022; Las Condes, Región Metropolitana de Santiago, Chile.</li>
+                    <h3 class="text-center mt-4">Formación</h3> 
+                    <li class="list-group-item mt-3">Ingeniería en Administración de Empresas con mención en Finanzas; Inacap Apoquindo.</li>
+                    <li class="list-group-item mt-3">Técnico en Informática; Inacap Apoquindo.</li>
+                </ul>
+            </div>
         </div>
-        <div class="col my-4">
-            <ul class="list-group list-group-flush">
-                <h3 class="text-center">Resumen</h3>
-                <li class="list-group-item">Actualmente soy estudiante en la Academia Desafio Latam en la carrera Desarrollador Full Stack JavaScript.</li>
-                <h3 class="text-center mt-4">Profesión</h3>
-                <li class="list-group-item">Ingeniero en Administración de Empresas con mención en Finanzas</li>
-                <h3 class="text-center mt-4">Experiencia Laboral</h3>   
-                <li class="list-group-item mt-3">Jefe de Swift banco Bice; Jornada completa; Desde Ene. 2023 hasta la actualidad; Las Condes, Región Metropolitana de Santiago, Chile.</li>
-                <li class="list-group-item mt-3">Supervisor de Swift banco Bice; Jornada completa; Desde oct. 2022 hasta Ene. 2023; Las Condes, Región Metropolitana de Santiago, Chile.</li>
-                <li class="list-group-item mt-3">Oficial Administrativo Pagos Alto Valor Banco Security; Jornada completa; Desde nov. 2018 hasta oct.2022; Las Condes, Región Metropolitana de Santiago, Chile.</li>
-                <h3 class="text-center mt-4">Formación</h3> 
-                <li class="list-group-item mt-3">Ingeniería en Administración de Empresas con mención en Finanzas; Inacap Apoquindo.</li>
-                <li class="list-group-item mt-3">Técnico en Informática; Inacap Apoquindo.</li>
-            </ul>
-        </div>
-    </div>
 </div>
+</section>
 <!-- FIN ACERCA DE MI -->
 
 <!-- DESAFIOS -->
